# sel4-misc

./: .config  .gitignore  .gitmodules  CMakeLists.txt  Kbuild  Kconfig  LICENSE.txt  Makefile  README.md  apps  build.sh  cidl_compile  cidl_templates  configs  refos_cidl_compile  test.lua  test2.lua
apps/: CMakeLists.txt  overview.txt
apps/custom_server/: CMakeLists.txt  Kbuild  Makefile
apps/custom_server/crt/arch-x86/: crt0.S
apps/custom_server/src/: basic.h  destructor.c  destructor.h  dprintf.h  main.c
apps/custom_server/src/alloc/: cslot_ao.c  cslot_ao.h  mem.c  mem.h  mem_ao.c  mem_ao.h  mem_arena_ao.c  mem_arena_ao.h  mem_fx.c  mem_fx.h  mem_fxalloc.c  mem_fxalloc.h  mem_fxseq.h  mem_multislab.c  mem_multislab.h  mem_page.c  mem_page.h  mem_slab.c  mem_slab.h  mem_vspace.c  mem_vspace.h  object.c  object.h  untyped.c  untyped.h
apps/custom_server/src/pc99/: serial.c  serial.h
apps/helloworld/: CMakeLists.txt
apps/helloworld/src/: main.c
apps/init/: CMakeLists.txt
apps/init/src/: errno.c  errno.h  execsrv.c  incbin.py  init.c  main.c  objectsrv.c  serial.c  serial.h  small.c  small.h  untyped.c  untyped.h
apps/init/src/alloc/: cslot.c  cslot.h  cslot_ao.h  mem_arena.c  mem_arena.h  mem_fxalloc.c  mem_fxcache.c  mem_fxcache.h  mem_fxseq.c  mem_page.c  mem_vspace.h  object.h  untyped.c
apps/ioroot/: CMakeLists.txt
apps/ioroot/src/: main.c
apps/registrar/: CMakeLists.txt
apps/registrar/src/: hashmap.c  hashmap.h  main.c
apps/sandbox/: CMakeLists.txt
apps/sandbox/src/: main.c
libs/: CMakeLists.txt  Kbuild  Kconfig  libdatastruct  librefos  librefossys  libvterm
libs/libbedrock/: CMakeLists.txt
libs/libbedrock/include/bedrock/: assert.h  bedrock.h  buffer.h  debug.h  deepcall.h  errno.h  errx.h  kmem.h  math.h  types.h
libs/libbedrock/src/: assert.c  buffer.c  debug.c  errno.c  errx.c  libm.h  math_floor.c  math_fmod.c  math_pow.c  miscmath.c  str10tod.c
libs/libbedrock/src/arch-x86/: _start.S  deepcall.s
libs/libelfloader/: CMakeLists.txt
libs/libelfloader/include/: elfloader.h  elfparser.h
libs/libelfloader/include/elfloader/: ctxexec.h  elfcontext.h  elfexec.h  elfloader.h  elfparser.h
libs/libelfloader/src/: elfexec.c  elfloader.c  elfparser.c
libs/libinit/: CMakeLists.txt
libs/libinit/include/init/: init.h
libs/libinit/src/: execcli.c  init.c  objectcli.c
libs/libipc/: CMakeLists.txt
libs/libipc/include/ipc/: core.h  ipc.h
libs/libipc/src/: core.c
libs/liblua/: CMakeLists.txt  README
libs/liblua/include/: lauxlib.h  lua.h  luaconf.h
libs/liblua/src/: lapi.c  lauxlib.c  lbaselib.c  lcode.c  lcorolib.c  lctype.c  lctype.h  ldblib.c  ldebug.c  ldo.c  lgc.c  llex.c  llimits.h  lobject.c  lstate.h
libs/libresource/: CMakeLists.txt
libs/libresource/include/resource/: cslot.h  cslot_ao.h  mem_arena.h  mem_fx.h  mem_fxalloc.h  mem_fxcache.h  mem_fxlarge.h  mem_fxseq.h  mem_page.h  mem_vspace.h  object.h  untyped.h
libs/libresource/src/: cslot.c  cslot_ao.c  mem_arena.c  mem_fx.c  mem_fxalloc.c  mem_fxcache.c  mem_fxlarge.c  mem_fxseq.c  mem_page.c  mem_vspace.c  object.c  untyped.c
